# le-lamp-challenge

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml  verify.yml
.hermes/: agent-task-01.md  agent-task-02.md  agent-task-03.md  agent-task-04.md  agent-task-05.md  agent-task-06.md  agent-task-07.md  agent-task-08.md  agent-task-09.md  agent-task-10.md  agent-task-11.md  agent-task-12.md  agent-task-13.md
.superpowers/sdd/: task-2-report.md
docs/: DEMO.md  LIMITATIONS.md  PRIVACY.md  evaluation.md  object-detection.md  verification.md
docs/design/: 01-overall-system-design.md  02-events-world-model-observability.md  03-engagement-perception.md  04-object-perception-memory.md  05-behavior-adaptive-preferences.md  06-output-compositor-adapters.md  07-conversation-audio-intelligence.md  08-simulator-dashboard.md  09-evaluation-delivery.md  README.md
evaluation/: manifest.json
frontend/: package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: bonuses.spec.ts  core-journey.spec.ts
frontend/src/: App.css  App.test.tsx  App.tsx
scripts/: check-contracts  verify-all
tests/: conftest.py  test_config.py  test_delivery_files.py  test_smoke.py
tests/api/: test_app.py  test_websocket_streaming.py
tests/audio/: test_analysis.py
tests/behavior/: test_attention_preferences.py  test_policy_compositor.py
tests/capture/: test_frames.py
tests/conversation/: test_grounding.py  test_openai_adapter.py  test_template.py  test_tools.py
tests/fakes/: vision.py
tools/: export_contract_schemas.py
(+104 files in other folders)
