[project]
name = "simulated-social-lamp"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.139.0",
    "numpy>=2.5.1",
    "pydantic>=2.13.4",
    "uuid6>=2025.0.1",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "hypothesis>=6.156.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["backend/src/social_lamp"]

[tool.pytest.ini_options]
pythonpath = ["backend/src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["social_lamp"]
mypy_path = "backend/src"
